--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGO_URI=mongodb://localhost:27017/expensetracker
 PORT=5000
 ACCESS_TOKEN_SECRET=your_very_long_random_secret_key
 REFRESH_TOKEN_SECRET=your_very_long_random_secret_key
+EMAIL=priyams1700@gmail.com
+EMAIL_PASSWORD=bxrvixxstetpgguv
